# my_first_project

./: docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: main.yml
back/: .env.dev  Dockerfile  db.sqlite3  pyproject.toml
back/back/: settings.py
back/foo/: apps.py
