[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["brian.gomez1 <brian.gomez@softlabperu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
ruff = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
